
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int errno ;
 int fflush (int ) ;
 int fprintf (int ,char*,char const*) ;
 int pause () ;
 int perror (char const*) ;
 int printf (char*) ;
 int stderr ;
 int stdout ;

void fatal(const char * msg)
{
 printf("\n");
 if (!errno) {
  fprintf(stderr, "FATAL: %s\n", msg);
 } else {
  perror(msg);
 }

 printf("\nentering endless loop");
 fflush(stdout);
 fflush(stderr);
 while (1) pause();
}
